# vulkan_bootstrap

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt  point_hash_grid_test.comp.spv  requirements.txt
ImGuiPlugin/: CMakeLists.txt
ImGuiPlugin/include/: ImGuiPlugin.hpp  ImGuiShaders.hpp
ImGuiPlugin/source/: ImGuiPlugin.cpp
VulkanBase/: CMakeLists.txt
VulkanBase/include/: AbstractCamera.hpp  BatchSubmission.hpp  BlendFactor.hpp  BlendOp.hpp  Builder.hpp  Camera.h  Canvas.hpp  CappedSink.h  ColorBlendStateBuilder.hpp  ComputePipelins.hpp  DepthStencilStateBuilder.hpp  DescriptorSetBuilder.hpp  DeviceLinkedList.hpp  DynamicStateBuilder.hpp  Entity.hpp  FirstPersonCamera.h  FlightCamera.h  Font.h  FourWayRadixSort.hpp  GpuProfiler.hpp  GraphicsPipelineBuilder.hpp  GraphisPipelineBuilder.hpp  ImGuiPlugin.hpp  InputAssemblyStateBuilder.hpp  InputManager.h  LogicOp.hpp  Mesh.h  MultisampleStateBuilder.hpp  OrbitingCamera.h  ParticleSystem.hpp  Phong.h  PipelineLayoutBuilder.hpp  Plugin.hpp  PointHashGrid.hpp  PrefixSum.hpp  Profiler.hpp  RasterizationStateBuilder.hpp  Settings.hpp  ShaderStageBuilder.hpp  SkyBox.hpp  (+68 more)
VulkanBase/include/gpu/: algorithm.h
VulkanBase/include/math/: geometry.hpp  lcp.hpp  mat.hpp  math.hpp  matrixops.hpp  quatOps.hpp  signedVolume.hpp  vecN.hpp  vectorops.hpp
VulkanBase/include/spectrum/: spectrum.hpp
VulkanBase/include/utility/: filemanager.hpp  vbmath.h
VulkanBase/source/: Camera.cpp  Canvas.cpp  ColorBlendStateBuilder.cpp  ComputePipelines.cpp  DepthStencilStateBuilder.cpp  DescriptorSetLayoutBuilder.cpp  DynamicStateBuilder.cpp  FirstPersonCamera.cpp  FlightCamera.cpp  Font.cpp  FourWayRadixSort.cpp  GraphicsPipelineBuilder.cpp  ImGuiPlugin.cpp  InputAssemblyStateBuilder.cpp  Mesh.cpp  MultisampleStateBuilder.cpp  OrbitingCamera.cpp  ParticleSystem.cpp  Phong.cpp  PipelineLayoutBuilder.cpp  Plugin.cpp  PointHashGrid.cpp  PrefixSum.cpp  RasterizationStateBuilder.cpp  ShaderModule.cpp  ShaderStageBuilder.cpp  SkyBox.cpp  Sort.cpp  TessellationStateBuilder.cpp  Texture.cpp  ThreadPool.cpp  VertexInputStateBuilder.cpp  ViewportStateBuilder.cpp  VulkanBaseApp.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanExtensions.cpp  VulkanRayQuerySupport.cpp  VulkanRayTraceBaseApp.cpp  VulkanRayTraceModel.cpp  (+24 more)
VulkanBase/tests/: BoxSurfaceFixture.hpp  BoxSurfaceTest.cpp  DeviceLinkedListTest.cpp  FindIntervalFixture.cpp  ForWayRadixLocalSort.cpp  FourWayRadixSortTest.cpp  GpuAlgorithms.cpp  PointHashGridBuilderTest.cpp  PrefixScanTest.cpp  RadixSortTest.cpp  SortFixture.hpp  VulkanFixture.hpp  VulkanInitialization.cpp  sample_test.cpp  vma_impl.cpp
bulletphysicsdemo/: CMakeLists.txt
bulletphysicsdemo/include/: BulletPhysicsDemo.hpp
bulletphysicsdemo/shaders/: cube.frag  cube.vert  floor.frag  floor.vert
bulletphysicsdemo/source/: BulletPhysicsDemo.cpp
bulletphysicsdemo/spv/: cube.frag.spv  cube.vert.spv  floor.frag.spv
examples/: CMakeLists.txt
examples/Cloth/: CMakeLists.txt
examples/Cloth/include/: ClothDemo.hpp
examples/Cloth/shaders/: cloth.comp  cloth_implicit.comp  cloth_triangle.comp  convex_hull.vert  render.frag  triangle_test.glsl
examples/Cloth/source/: ClothDemo.cpp
examples/Cloth/spv/: cloth.comp.spv  cloth_implicit.comp.spv  cloth_triangle.comp.spv  convex_hull.vert.spv  render.frag.spv
examples/ComputeDemo/: CMakeLists.txt
examples/ComputeDemo/include/: ComputeDemo.hpp
examples/ComputeDemo/source/: ComputeDemo.cpp
examples/Demo/: CMakeLists.txt
examples/Demo/include/: Demo.h
examples/Demo/source/: Demo.cpp
examples/FontTest/: CMakeLists.txt
examples/FontTest/include/: FontTest.h
examples/FontTest/source/: FontTest.cpp
examples/ImGuiDemo/: CMakeLists.txt
examples/ImGuiDemo/include/: ImGuiDemo.hpp
examples/ImGuiDemo/source/: ImGuiDemo.cpp
examples/MarchingCubes/: CMakeLists.txt
examples/MarchingCubes/include/: MarchingCube.hpp  MarchingCubeDemo.hpp
examples/MeshLoading/: CMakeLists.txt
examples/MeshLoading/include/: MeshLoading.h
examples/Playground/: CMakeLists.txt  drawImage.cpp  drawImage.h  main.cpp  namespaceAlias.h  openexr_eval.h  playground.cpp
examples/Primitives/: CMakeLists.txt
examples/RayTracerDemo/: CMakeLists.txt
examples/RayTracingImplicits/: CMakeLists.txt
examples/VulkanCube/: CMakeLists.txt
examples/VulkanCubeInstanced/: CMakeLists.txt
examples/bloom/: CMakeLists.txt
examples/bulletphysicsdemo/: CMakeLists.txt
examples/collision_detection/: CMakeLists.txt  README.md
examples/color_space/: CMakeLists.txt
examples/convex_decomposition/: CMakeLists.txt
examples/curves_and_surfaces/: CMakeLists.txt  README.md
examples/deferred_rendering/: CMakeLists.txt
examples/entt_demo/: CMakeLists.txt
examples/fluid_dynamics/: CMakeLists.txt  README.md
examples/fluid_sim_playback/: CMakeLists.txt
examples/fluid_simulation/: CMakeLists.txt
examples/gjk/: CMakeLists.txt
examples/graph/: CMakeLists.txt
examples/hdr/: CMakeLists.txt  README.md
examples/parallax_mapping/: CMakeLists.txt
examples/path_tracer/: CMakeLists.txt  README.md
examples/pbr/: CMakeLists.txt
examples/project_template.g8/: CMakeLists.txt  README.md  default.properties
examples/rotation/: CMakeLists.txt
examples/sampling/: CMakeLists.txt
examples/shader_binding_table/: CMakeLists.txt
examples/shadow_mapping/: CMakeLists.txt
examples/skeletal_animation/: CMakeLists.txt
examples/smoke_sim_2d/: CMakeLists.txt
examples/spectral_power_distribution/: CMakeLists.txt  LCDS.spd  cie.stdillum.F4.spd  cie.stdillum.F9.spd
examples/sph_fluid_sim/: CMakeLists.txt
examples/ssao/: CMakeLists.txt  README.md
examples/stereographic_projection/: CMakeLists.txt
examples/tessellation/: CMakeLists.txt
examples/vulkan-app-template/: CMakeLists.txt
examples/whitted_ray_tracer/: CMakeLists.txt  README.md
fluid_sim_playback/: CMakeLists.txt
fluid_sim_playback/source/: FluidSimPlayback.cpp
project_template.g8/: CMakeLists.txt  README.md  default.properties
project_template.g8/include/: $classname$.hpp
project_template.g8/source/: $classname$.cpp
(+1218 files in other folders)
