add_subdirectory(bulletphysicsdemo)
add_subdirectory(deferred_rendering)
add_subdirectory(Demo)
add_subdirectory(VulkanCube)
add_subdirectory(FontTest)
add_subdirectory(MeshLoading)
add_subdirectory(Primitives)
add_subdirectory(ImGuiDemo)
add_subdirectory(ComputeDemo)
add_subdirectory(Cloth)
add_subdirectory(Playground)
add_subdirectory(RayTracerDemo)
add_subdirectory(RayTracingImplicits)
add_subdirectory(MarchingCubes)
add_subdirectory(sph_fluid_sim)
add_subdirectory(fluid_sim_playback)
add_subdirectory(collision_detection)