add_subdirectory(bulletphysicsdemo)
add_subdirectory(deferred_rendering)
add_subdirectory(Demo)
add_subdirectory(VulkanCube)
add_subdirectory(FontTest)
add_subdirectory(MeshLoading)
add_subdirectory(Primitives)
add_subdirectory(ImGuiDemo)
add_subdirectory(ComputeDemo)
add_subdirectory(Cloth)
add_subdirectory(Playground)
add_subdirectory(RayTracerDemo)
add_subdirectory(RayTracingImplicits)
add_subdirectory(MarchingCubes)
#add_subdirectory(sph_fluid_sim)
add_subdirectory(fluid_sim_playback)
add_subdirectory(collision_detection)
add_subdirectory(shadow_mapping)
add_subdirectory(skeletal_animation)
add_subdirectory(entt_demo)
add_subdirectory(rotation)
add_subdirectory(hdr)
add_subdirectory(bloom)
add_subdirectory(convex_decomposition)
add_subdirectory(stereographic_projection)
add_subdirectory(ssao)
add_subdirectory(pbr)
add_subdirectory(parallax_mapping)
add_subdirectory(tessellation)
add_subdirectory(curves_and_surfaces)
add_subdirectory(graph)
add_subdirectory(gjk)
add_subdirectory(fluid_dynamics)
add_subdirectory(fluid_simulation)
add_subdirectory(smoke_sim_2d)
add_subdirectory(shader_binding_table)
add_subdirectory(whitted_ray_tracer)